--- a/style.css
+++ b/style.css
@@ -8,17 +8,43 @@ h1 {
 }
 
 .entry {
-    position: relative;
-    font-size: 2em;
-    width: 70%;
-    left: 15%;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-
-    
     border-color: rgb(5, 1, 224);
     border-style: solid;
     border-width: 5px;
+}
+
+.entries {
+    position: relative;
+    width: 80%;
+    left: 10%;
+}
+
+table {
+    display: table;
+    table-layout: fixed;
+    width: 100%;
+    font-size: 2em;
+    outline: solid;
+}
+
+#book-table td, #book-table th{
+    text-align: left;
+}
+
+#title-box {
+    width: auto;
+}
+
+#author-box {
+    width: 20%;
+}
+
+#pages-box, #read-box {
+    width: 10%;
+}
+
+.button-box {
+    width: 12%;
 }
 
 .hide {
