--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: rgb(61, 176, 221);
+    color: black;
 }
 
 h1 {
@@ -8,7 +9,7 @@ h1 {
 }
 
 .entry {
-    border-color: rgb(5, 1, 224);
+    border-color: rgb(0, 95, 139);
     border-style: solid;
     border-width: 5px;
 }
@@ -27,16 +28,10 @@ table {
     outline: solid;
 }
 
+table td + td { border-left:5px solid rgb(0, 95, 139); }
+
 #book-table td, #book-table th{
-    text-align: left;
-}
-
-#title-box {
-    width: auto;
-}
-
-#author-box {
-    width: 20%;
+    text-align: center;
 }
 
 #pages-box, #read-box {
@@ -60,10 +55,23 @@ table {
     opacity: .6;
 }
 
+#add{
+    position: fixed;
+    bottom: 5%;
+    right: 5%;
+    border-radius: 50%;
+    height: 3em;
+    width: 3em;
+    font-size: 50px;
+    color: white;
+}
+
 button {
     font-size: .7em;
     margin: .5em;
+    background-color: rgb(0, 95, 139);
 }
+
 .read-button:hover {
     background-color: rgb(19, 143, 19);
 }
