--- a/style.css
+++ b/style.css
@@ -116,14 +116,40 @@ table td + td { border-left:5px solid rgb(0, 95, 139); }
 
 #add-button{
     position: fixed;
-    bottom: 0;
-    right: 0;
+    bottom: 1%;
+    right: 1%;
     border-radius: 50%;
     border-color: white;
-    height: 3em;
-    width: 3em;
-    font-size: 50px;
+    height: 2em;
+    width: 2em;
+    font-size: 60px;
     color: white;
+    margin: 0;
+}
+
+@media (max-width:1600px) {
+    #add-button {
+        font-size: 40px;
+    }
+    button {
+        font-size: .5em;
+    }
+    table {
+        font-size: 1.5em;
+    }
+}
+
+@media (max-width:1250px) {
+    button {
+        font-size: .3em;
+    }
+
+    #add-button {
+        font-size: 30px;
+    }
+    table {
+        font-size: 1em;
+    }
 }
 
 button {
