--- a/style.css
+++ b/style.css
@@ -1,168 +1,174 @@
-
 body {
-    background-color: rgb(61, 176, 221);
-    color: black;
+  background-color: rgb(61, 176, 221);
+  color: black;
 }
 
 h1 {
-    text-align: center;
-    font-size: 5em;
+  text-align: center;
+  font-size: 5em;
 }
 
 div#new-entry-container {
-    position: absolute;
-    width: 30%;
-    height: 40%;
-    top: 30%;
-    left: 35%;
-    margin: 0 auto;
+  position: absolute;
+  width: 30%;
+  height: 40%;
+  top: 30%;
+  left: 35%;
+  margin: 0 auto;
 
-    filter: brightness(1);
-    background-color: rgb(61, 176, 221);
-    font-size: 2em;
-    z-index: 1;
+  filter: brightness(1);
+  background-color: rgb(61, 176, 221);
+  font-size: 2em;
+  z-index: 1;
 }
 
 #new-entry-header {
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.2em;
-    border-bottom: white;
-    border-width: 5px;
-    border-style: none none solid none;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2em;
+  border-bottom: white;
+  border-width: 5px;
+  border-style: none none solid none;
 }
 
 #new-entry-form {
-    padding-left: 10px;
-    height: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  padding-left: 10px;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
 input {
-    font-size: .7em;
+  font-size: 0.7em;
 }
 
 input#pages {
-    width: 20%;
+  width: 20%;
 }
 
 #submit {
-    align-self: center;
+  align-self: center;
 }
 
 #new-entry-form-close {
-    align-self: flex-start;
-    margin: .1em;
+  align-self: flex-start;
+  margin: 0.1em;
 }
 
-
 #entries {
-    position: relative;
-    width: 80%;
-    left: 10%;
-    top: 50px;
+  position: relative;
+  width: 80%;
+  left: 10%;
+  top: 50px;
 }
 
 table {
-    display: table;
-    table-layout: fixed;
-    width: 100%;
-    font-size: 2em;
-    outline: solid;
+  display: table;
+  table-layout: fixed;
+  width: 100%;
+  font-size: 2em;
+  outline: solid;
 }
 
-table td + td { border-left:5px solid rgb(0, 95, 139); }
+table td + td {
+  border-left: 5px solid rgb(0, 95, 139);
+}
 
 .entry {
-    border-color: rgb(0, 95, 139);
-    border-style: solid;
-    border-width: 5px;
+  border-color: rgb(0, 95, 139);
+  border-style: solid;
+  border-width: 5px;
 }
 
 .dim-background {
-    background-color: rgb(35, 100, 126);
+  background-color: rgb(35, 100, 126);
 }
 
 .dim {
-    filter: brightness(.4);
+  filter: brightness(0.4);
 }
 
-#book-table td, #book-table th{
-    text-align: center;
+#book-table td,
+#book-table th {
+  text-align: center;
 }
 
-#pages-box, #read-box {
-    width: 10%;
+#pages-box,
+#read-box {
+  width: 10%;
 }
 
 .button-box {
-    width: 12%;
+  width: 12%;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 .show {
-    display: block;
-    z-index: 1;
+  display: block;
+  z-index: 1;
 }
 
 .have-read {
-    opacity: .6;
+  opacity: 0.6;
 }
 
-#add-button{
-    position: fixed;
-    bottom: 1%;
-    right: 1%;
-    border-radius: 50%;
-    border-color: white;
-    height: 2em;
-    width: 2em;
-    font-size: 60px;
-    color: white;
-    margin: 0;
+#add-button {
+  position: fixed;
+  bottom: 1%;
+  right: 1%;
+  border-radius: 50%;
+  border-color: white;
+  height: 2em;
+  width: 2em;
+  font-size: 60px;
+  color: white;
+  margin: 0;
 }
 
-@media (max-width:1600px) {
-    #add-button {
-        font-size: 40px;
-    }
-    button {
-        font-size: .5em;
-    }
-    table {
-        font-size: 1.5em;
-    }
+@media (max-width: 1600px) {
+  #add-button {
+    font-size: 40px;
+  }
+  button {
+    font-size: 0.5em;
+  }
+  table {
+    font-size: 1.5em;
+  }
 }
 
-@media (max-width:1250px) {
-    button {
-        font-size: .3em;
-    }
+@media (max-width: 1250px) {
+  button {
+    font-size: 0.3em;
+  }
 
-    #add-button {
-        font-size: 30px;
-    }
-    table {
-        font-size: 1em;
-    }
+  #add-button {
+    font-size: 30px;
+  }
+  table {
+    font-size: 1em;
+  }
 }
 
 button {
-    font-size: .7em;
-    margin: .5em;
-    background-color: rgb(0, 95, 139);
-    width: fit-content;
+  font-size: 0.7em;
+  margin: 0.5em;
+  background-color: rgb(0, 95, 139);
+  width: fit-content;
 }
 
 .read-button:hover {
-    background-color: rgb(19, 143, 19);
+  background-color: rgb(19, 143, 19);
 }
 
 .remove-button:hover {
-    background-color: rgb(204, 54, 54);
+  background-color: rgb(204, 54, 54);
+}
+
+#new-entry-form input:valid {
+  border: green solid 3px;
 }
